--- a/src/app/modules/wallet/components/tokens/transactions/transactions-tokens.component.html
+++ b/src/app/modules/wallet/components/tokens/transactions/transactions-tokens.component.html
@@ -45,7 +45,7 @@
         [transactions]="transactions"
         [filterApplied]="filterApplied"
       >
-        <ng-container *ngTemplateOutlet="firstRow"></ng-container>
+        <!-- <ng-container *ngTemplateOutlet="firstRow"></ng-container> -->
       </m-walletTransactionsTable>
       <infinite-scroll
         distance="25%"
