Epic TOTP support 2021

--- a/src/app/common/layout/v3-topbar/v3-topbar.component.html
+++ b/src/app/common/layout/v3-topbar/v3-topbar.component.html
@@ -64,7 +64,7 @@
           <div class="m-v3TopbarContainer__loginWrapper">
             <a
               class="m-v3TopbarLoginWrapper__login"
-              routerLink="/login"
+              (click)="onLoginClick()"
               title="Login"
               i18n-title="@@COMMON__LOGIN"
             >
