--- a/src/app/modules/settings-v2/settings-header.component.html
+++ b/src/app/modules/settings-v2/settings-header.component.html
@@ -1,6 +1,6 @@
 <div class="m-settingsV2__headerWrapper">
   <div class="m-settingsV2__backButton">
-    <a routerLink="..">
+    <a routerLink=".." (click)="goBack()">
       <i class="material-icons">arrow_back</i
       ><span i18n="@@COMMON__ACTIONS__BACK">Back</span>
     </a>
