(chore): remove transak overview post completion - closes #4558

--- a/src/app/modules/blockchain/token-purchase/v2/order-received/order-received-modal.component.html
+++ b/src/app/modules/blockchain/token-purchase/v2/order-received/order-received-modal.component.html
@@ -12,7 +12,7 @@
         receive a confirmation email once your order is processed.
       </p>
     </div>
-    <div class="m-orderReceivedBody__footer">
+    <!-- <div class="m-orderReceivedBody__footer">
       <div class="m-orderReceivedFooter__infoBlock">
         <span class="m-orderReceivedInfoBlock__label">Payment Method</span>
         <span class="m-orderReceivedInfoBlock__value">{{
@@ -32,6 +32,6 @@
           {{ orderData.currency }}</span
         >
       </div>
-    </div>
+    </div> -->
   </div>
 </m-concertColors__modal>
