(chore): hide entire two factor footer

--- a/src/app/modules/auth/multi-factor-auth/panels/totp/totp.component.html
+++ b/src/app/modules/auth/multi-factor-auth/panels/totp/totp.component.html
@@ -28,7 +28,7 @@
   <ng-container i18n="@@MFA_AUTH__VERIFY">Verify</ng-container>
 </m-button>
 
-<div class="m-mfaAuth__footerContainer">
+<div class="m-mfaAuth__footerContainer" hidden>
   <span class="m-mfaAuth__footerTitle" i18n="@@MFA_AUTH__HAVING_PROBLEMS"
     >Having problems?</span
   >
