Get rid of blog option in groups

--- a/src/app/modules/composer/components/title-bar/title-bar.component.html
+++ b/src/app/modules/composer/components/title-bar/title-bar.component.html
@@ -11,7 +11,10 @@
 
   <div
     *ngIf="
-      !(isEditing$ | async) && !(attachment$ | async) && !(remind$ | async)
+      !(isEditing$ | async) &&
+      !(attachment$ | async) &&
+      !(remind$ | async) &&
+      !containerGuid
     "
     class="m-composerTitleBar__createBlogTrigger"
     [hidden]="isPosting$ | async"
