--- a/src/app/modules/composer/components/popup/monetize/v2/components/plus/plus.component.html
+++ b/src/app/modules/composer/components/popup/monetize/v2/components/plus/plus.component.html
@@ -79,6 +79,8 @@
     [disabled]="!canSave"
     i18n="@@COMMON__SAVE"
     data-cy="monetize-save-button"
+    size="small"
+    color="blue"
   >
     Save
   </m-button>
