--- a/src/app/modules/composer/components/popup/tags/tags.component.html
+++ b/src/app/modules/composer/components/popup/tags/tags.component.html
@@ -59,6 +59,8 @@
       (onAction)="save()"
       data-cy="tags-save-button"
       i18n="@@COMPOSER_POPUP__SAVE_TAGS"
+      size="small"
+      color="blue"
     >
       Save Tags
     </m-button>
