(feat): plyr now supports hls streaming

--- a/src/app/modules/media/components/video-player/player.component.scss
+++ b/src/app/modules/media/components/video-player/player.component.scss
@@ -7,8 +7,13 @@
 .plyr video {
   height: 100%;
 }
-.plyr--video.plyr--stopped .plyr__controls {
-  display: none;
+.plyr--video.plyr--stopped {
+  .plyr__controls {
+    display: none;
+  }
+  .plyr__control {
+    display: none;
+  }
 }
 
 [class*='m-videoPlayer__notice'] {
