--- a/src/app/modules/media/components/video-player/player.component.html
+++ b/src/app/modules/media/components/video-player/player.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="isPlayable(); else placeholder">
+<ng-container *ngIf="showPlyr; else placeholder">
   <span
     class="m-videoPlayer__notice--error"
     *ngIf="status === 'failed' && !(awaitingTranscode | async)"
@@ -13,10 +13,12 @@
   </span>
   <div class="m-videoPlayer__screen">
     <plyr
+      *ngIf="(sources$ | async)?.length"
       style="display: block; width: 100%; height: 100%;"
+      [plyrDriver]="plyrDriver$ | async"
       [plyrPoster]="service.poster$ | async"
       [plyrPlaysInline]="true"
-      [plyrSources]="!service.playable ? emptySource : (sources$ | async)"
+      [plyrSources]="sources$ | async"
       [plyrOptions]="options"
       (plyrEnded)="onEnded($event)"
       (plyrPlay)="onPlayed($event)"
