--- a/src/app/modules/blogs/view/view.html
+++ b/src/app/modules/blogs/view/view.html
@@ -52,7 +52,7 @@
     ></google-ad>
   </ng-container>
 
-  <div class="mdl-grid" style="width:100%">
+  <div class="mdl-grid m-blog-header" style="width:100%;">
     <div class="mdl-cell mdl-cell--12-col">
       <h1 class="m-blog--title">{{blog.title}}</h1>
     </div>
