--- a/src/app/modules/blogs/view/view.ng.scss
+++ b/src/app/modules/blogs/view/view.ng.scss
@@ -1,6 +1,13 @@
 @import 'defaults.scss';
 
 :host {
+  .m-blog-header {
+    padding-bottom: 20px;
+    margin-bottom: 20px;
+    @include m-theme() {
+      border-bottom: 1px solid themed($m-borderColor--primary);
+    }
+  }
   @media screen and (max-width: $max-mobile) {
     .m-blog--title {
       font-size: 32px;
@@ -16,7 +23,14 @@
   }
 
   .m-blog--footer {
-    margin-bottom: 50px;
+    margin: 30px 0;
+    padding: 20px 0;
+
+    @include m-theme() {
+      border-top: 1px solid themed($m-borderColor--primary);
+      border-bottom: 1px solid themed($m-borderColor--primary);
+    }
+
     .m-license-info {
       @include m-theme() {
         color: themed($m-textColor--tertiary);
@@ -78,21 +92,41 @@
       padding: 0 $minds-padding;
 
       a {
+        text-decoration: none;
+
+        &:hover {
+          text-decoration: underline;
+        }
+
         @include m-theme() {
-          color: themed($m-grey-950);
+          color: themed($m-link);
         }
       }
+
       img {
         max-width: 100%;
         height: auto;
+        margin: 50px 0;
+        @include m-theme() {
+          border: 1px solid themed($m-borderColor--primary);
+        }
       }
 
       ul {
         list-style: disc;
+        margin: 30px 0;
+        a {
+          font-weight: 400;
+        }
       }
 
       ol {
         list-style: decimal;
+        margin: 30px 0;
+
+        a {
+          font-weight: 400;
+        }
       }
 
       br,
@@ -105,24 +139,26 @@
         line-height: 30px;
 
         @include m-theme() {
-          color: rgba(themed($m-black), 0.84);
+          color: themed($m-textColor--secondary);
         }
       }
 
       p {
+        font-family: 'Roboto', Helvetica, sans-serif;
+
         margin-bottom: 0.5em;
         font-weight: 400;
         font-style: normal;
-        font-size: 21px;
-        line-height: 1.58;
-        letter-spacing: 0.5px;
-        letter-spacing: -0.003em;
-        font-family: 'Roboto', Helvetica, sans-serif;
-        margin-top: 29px;
-        text-rendering: optimizeLegibility;
-        -webkit-font-smoothing: antialiased;
+        font-size: 17px;
+        line-height: 1.4em;
+        margin: 15px 0;
+
         @include m-theme() {
-          color: rgba(themed($m-black), 0.84);
+          color: themed($m-textColor--secondary);
+        }
+
+        a {
+          font-weight: normal;
         }
       }
 
@@ -132,6 +168,12 @@
       h4,
       h5 {
         font-weight: 600;
+        margin: 30px 0;
+      }
+
+      h2 {
+        margin: 30px 0 10px 0;
+        font-size: 28px;
       }
 
       figcaption {
@@ -152,11 +194,20 @@
 
       ul,
       ol {
-        margin: 18px 0;
+        margin: 17px 0;
 
         li {
           margin-bottom: 0.5em;
-          font-size: 21px;
+          font-size: 17px;
+        }
+      }
+
+      figure.image {
+        @media screen and (max-width: $max-mobile) {
+          margin-block-start: 0;
+          margin-block-end: 0;
+          margin-inline-start: 0;
+          margin-inline-end: 0;
         }
       }
 
