--- a/src/app/modules/blockchain/token-purchase/v2/purchase/purchase.component.ng.scss
+++ b/src/app/modules/blockchain/token-purchase/v2/purchase/purchase.component.ng.scss
@@ -26,7 +26,7 @@
 .m-blockchainTokenPurchase {
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: flex-start;
   background: unset !important;
   border-radius: 2px;
   padding: unset;
