Fix display quirk on group list

--- a/src/app/modules/groups/sidebar-markers/sidebar-markers.component.scss
+++ b/src/app/modules/groups/sidebar-markers/sidebar-markers.component.scss
@@ -71,6 +71,7 @@ m-group--sidebar-markers {
             white-space: nowrap;
             text-overflow: ellipsis;
             overflow-x: hidden;
+            padding-left: 22px;
 
             @include m-theme() {
               color: themed($m-textColor--secondary);
