Boost modal fixes

--- a/src/app/modules/boost/modal/inputs/amount-input/amount-input.component.ng.scss
+++ b/src/app/modules/boost/modal/inputs/amount-input/amount-input.component.ng.scss
@@ -4,6 +4,7 @@
   .m-boostModalAmount__container {
     display: flex;
     flex-flow: row wrap;
+    border-radius: 2px;
 
     &.isFocused {
       @include m-theme() {
